--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </nav>
   <header class="animated fadeInDown">
     <h1>Raghavan Koduri Srinivasa</h1>
-    <p>Cybersecurity | TryHackMe -Top 9%| Preparing for CISM, Security+ | ACS & ISACA MEMBER </p>
+    <p1>Cybersecurity | TryHackMe -Top 9%| Preparing for CISM, Security+ | ACS & ISACA MEMBER </p1>
     <section id="tryhackme"><script src="https://tryhackme.com/badge/2028652"></script></section>
   </header>
   <main>
