--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <img src="mail.svg" class="w-6 h-6" alt="Contact"> Contact
     </h2>
     <p>Email: <a href="mailto:raghavanks71@gmail.com" class="text-blue-500">raghavanks71@gmail.com</a></p>
-    <a href="Resume.pdf" download class="mt-4 inline-block px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600">Download Resume</a>
+    <a href="resume.pdf" download class="mt-4 inline-block px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600">Download Resume</a>
   </div>
 </section>
 
@@ -154,4 +154,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
