--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
       </div>
       <div class="glass-card p-6 aspect-square flex flex-col items-center justify-center text-center">
         <img src="https://pngimg.com/uploads/github/github_PNG27.png" alt="Project Image" class="mb-4 w-24 h-24 object-cover rounded">
-        <p>Super-secret Project 🚀</p>
-        <a href="" class="mt-2 text-blue-500 hover:underline">Learn More</a>
+        <p> VibeSecCode 🚀</p>
+        <a href="https://github.com/raghavansrinivasa/VibeCodeSec" class="mt-2 text-blue-500 hover:underline">Click Here</a>
       </div>
     </div>
   </div>
@@ -154,5 +154,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
